<resources>
    <string name="app_name">FinalProject</string>
    <string name="ok">Ok</string>
    <string name="login_failed">Email or Password incorrect</string>
    <string name="home_title">Hello I am home</string>
    <string name="sample_text">Sample Text</string>
    <string name="good_morning">Good Morning </string>
    <string name="good_afternoon">Good Afternoon </string>
    <string name="good_night">Good Night </string>
    <string name="reservation_title">Reservations</string>
    <string name="bares_title">Bares</string>
    <string name="settings_title">Settings</string>
    <string name="profile_title">Profile</string>
    <string name="guidelines_title">COVID-19</string>
    <string name="contactandsupport_title">Contact us</string>
    <string name="reservation_date">00/00/0000</string>
    <string name="reservation_detail">Table #N for N people</string>
    <string name="reservation_bar_name">Bar Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_index">Index</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="user_name">User name</string>
    <string name="user_email">User email</string>
    <string name="change_photo">Change Photo</string>
    <string name="guidelines">Guidelines</string>
    <string name="contact_information">In case that you have some problem, concern or feedback about the application feel free to reach us by leaving us a message in the box below.</string>
    <string name="covid_information">According to Executive Decree No. 42603-S of September 07, 2020, the company shall must have a mask of mandatory use for all users who require access to its services within its access to its services within its facilities.</string>
    <string name="covid_information2">It must ensure that the protocols for hand washing, sneezing and coughing, other forms of greeting coughing and sneezing, other forms of greetings, not touching the face and the population at risk, physical distancing between people.</string>
    <string name="title_activity_covid_guidelines">CovidGuidelines</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
    <string name="default_web_cliet_id" translatable="false">664840468763-u5haobfdqleri1ss5fpsp855fh2nid1c.apps.googleusercontent.com</string>
    <string name="default_web_clietn_id" translatable="false">664840468763-7okpj7579h2p6k0hoga0a8jvt03snqbo.apps.googleusercontent.com</string>
    <string name="msg_reservation_advise">Reserve the place you want before you run out of your field!!!</string>
    <string name="msg_no_reservation">Currently you have no reservations.</string>
    <string name="current_reservation_title">Current Reservations</string>
    <string name="bar_open">Open</string>
    <string name="Address">Address: </string>
    <string name="bar_direction"> Calle de la amargura, Saprissa</string>
    <string name="address">"Address: "</string>
    <string name="available_bares_title">Bar Availables</string>
    <string name="table_selection">Add Reservation</string>
    <string name="table_des">Please, fill out the fields to add your reservation</string>
    <string name="table_select_tables">Reservation preferences</string>
    <string name="table_some_text">Available tables:</string>
    <string name="table_total">Total tables</string>
    <string name="table_some_text2">Quantity of tables to reserve:</string>
    <string name="table_total_tables">2</string>
    <string name="bt_request">Reserve</string>
    <string name="bt_delete">Delete reservation</string>
    <string name="bt_update">Edit reservation</string>
    <string name="msg_request">you can\'t reserve that number of tables</string>
    <string name="msg_barname">Bar name</string>
    <string name="msg_userid">User id</string>
    <string name="msg_description">Description</string>
    <string name="msg_date">Date</string>
    <string name="msg_reservation_added">Reservation added succesfully</string>
    <string name="msg_nofound_data">Some fields are no fill</string>

    <string name="si">Yes</string>
    <string name="no">No</string>
    <string name="menu_delete">Delete reservation</string>
    <string name="msg_seguro_borrar">Are you sure to delete this reservation?</string>
    <string name="tv_barname">Bar name</string>
    <string name="tv_userid">User id</string>
    <string name="tv_desc">Quantity of tables to reserve</string>
    <string name="tv_date">Date</string>
    <string name="msg_reservation_updated">Reservation edited succesfully</string>
    <string name="msg_updatereservation_failed">Please fill in all fields</string>

</resources>