<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ProfilePage">

    <TextView
        android:id="@+id/tv_covid_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/sen"
        android:text="@string/profile_title"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/ProfilePhoto"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="0dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/sen"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="@string/user_name" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sen"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="@string/user_email" />

    <TextView
        android:id="@+id/change_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/sen"
        android:text="@string/change_photo"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="12sp"
        tools:text="@string/change_photo" />

    <ListView
        android:id="@+id/lv_profile_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:divider="#E5E5E5"
        android:dividerHeight="1px" >
    </ListView>


</LinearLayout>