<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reservation_item_view"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="25dp"
    app:cardElevation="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tv_reservation_bar_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservation_bar_name"
            android:textAlignment="center"
            android:textColor="#011627"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_reservation_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/reservation_detail"
            android:textAlignment="center"
            android:textColor="#898A8D"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reservation_bar_name" />

        <TextView
            android:id="@+id/tv_reservation_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservation_date"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reservation_detail" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_map" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="16dp"
        android:layout_height="match_parent"
        android:background="#011627"
        android:visibility="visible"
        tools:visibility="visible">

    </FrameLayout>

</androidx.cardview.widget.CardView>