<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reservation_item_view"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="15dp"
    app:cardElevation="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/tv_reservation_bar_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reservation_bar_name"
            android:textAlignment="center"
            android:textColor="#011627"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_reservation_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/bar_open"
            android:textAlignment="center"
            android:textColor="#46B005"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar_direction"
            android:textColor="#898A8D"
            app:layout_constraintBottom_toTopOf="@+id/tv_reservation_date"
            app:layout_constraintStart_toEndOf="@+id/tv_address_subtitle"
            app:layout_constraintTop_toBottomOf="@+id/tv_reservation_bar_name"
            app:layout_goneMarginLeft="50dp" />

        <TextView
            android:id="@+id/tv_address_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="Address:"
            android:textColor="#898A8D"
            app:layout_constraintBottom_toTopOf="@+id/tv_reservation_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reservation_bar_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:background="#011627"
        android:visibility="visible"
        tools:visibility="visible">

    </FrameLayout>

</androidx.cardview.widget.CardView>